# AppLinAlg

./: .gitignore  README.md  pyproject.toml
task1/: task1.ipynb  task1.py
task2/: task2.ipynb  task2.py
task3/: task3.ipynb  task3.py
task4/: task4.ipynb  task4.py
